src/test/ui/iterators/bound.stderr
error[E0277]: `u8` is not an iterator
  --> $DIR/bound.rs:2:10
   |
LL | struct S<I: Iterator>(I);
   |             -------- required by this bound in `S`
LL | struct T(S<u8>);
   |          ^^^^^ `u8` is not an iterator
   |
   = help: the trait `std::iter::Iterator` is not implemented for `u8`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
